# LeBonBot

./: .gitignore  LICENSE  README.md  biome.jsonc  next.config.mjs  package.json  pnpm-lock.yaml
.rpiv/artifacts/designs/: 2026-05-22_04-36-13_leboncoin-real-estate-bot.md
.rpiv/artifacts/discover/: 2026-05-22_01-51-10_leboncoin-real-estate-bot.md  2026-05-22_03-08-00_leboncoin-real-estate-bot.md
.rpiv/artifacts/plans/: 2026-05-24_20-10-14_leboncoin-real-estate-bot.md
.rpiv/artifacts/research/: 2026-05-22_04-29-28_leboncoin-real-estate-bot-architecture.md
sidecar/: bundle.mjs  package-lock.json  package.json  tsconfig.json
sidecar/binaries/: scraper  scraper.cjs
sidecar/src/: index.ts  llm.ts  scraper.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  persistence.rs  scanner.rs  telegram.rs  tray.rs  types.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/alerts/edit/: page.tsx
src/app/alerts/new/: page.tsx
src/app/settings/: page.tsx
src/components/: AlertForm.tsx  StatusPanel.tsx
src/hooks/: useBotStatus.ts
